# bmstu-cg-courseProject-5th-sem

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  justfile  package-lock.json
benches/: bench.rs
docs/: TZ.doc  index.html
docs/latex/Practicum/: 01-definitions.tex  02-abbreviations.tex  03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  Makefile  biblio.bib  coursework.tex  preamble.tex
docs/latex/coursework/: 01-definitions.aux  01-definitions.tex  02-abbreviations.aux  02-abbreviations.tex  03-introduction.aux  03-introduction.tex  04-analysis.aux  04-analysis.tex  05-design.aux  05-design.tex  06-implementation.aux  06-implementation.tex  07-research.aux  08-conclusion.aux  09-biblio.aux  biblio.bib  coursework.aux  coursework.bbl  coursework.blg  coursework.tex  coursework.toc  preamble.inc.tex
docs/uml/: Untitled.mdj
model/: cube.txt
sh/: build_demo_web.sh
src/: app_factory.rs  backend_panel.rs  canvas_factory.rs  constants.rs  custom_loader.rs  errors.rs  frame_history.rs  lib.rs  macros.rs  main.rs  managers.rs  models.rs  objects.rs  wrap_app.rs
src/app_factory/: app.rs  app_slint.rs  app_winit.rs  canvas.rs  canvas_factory.rs  drawer.rs  errors.rs
src/app_factory/canvas/: canvas_pixel.rs
src/app_factory/canvas_factory/: canvas.rs  canvas_skia.rs
src/app_factory/drawer/: drawerSTD.rs  drawer_std.rs
src/app_factory/errors/: notImplError.rs  wrongSizeErr.rs
src/app_factory/slint/: build.rs
src/apps/: main_app.rs  mod.rs
src/canvas_factory/: canvas.rs
src/custom_loader/: builder_factory.rs  frame_loader.rs  loader.rs
src/custom_loader/builder_factory/: model_builder.rs
src/custom_loader/frame_loader/: file_loader.rs
src/custom_loader/loader/: model_loader.rs
src/errors/: build_error.rs  focus_error.rs  not_impl_error.rs  read_error.rs  wrongSizeErr.rs  wrong_size_err.rs
src/managers/: camera_manager.rs  load_manager.rs  transform_manager.rs  visitor.rs
src/models/: frame_model.rs  model.rs
src/models/frame_model/: edge.rs  point.rs  triangle.rs
src/objects/: camera.rs  object.rs  revolution.rs  visibility.rs
src/objects/revolution/: abstract_obj.rs  cone.rs  cylinder.rs  sphere.rs
ui/: appwindow.slint  err_dialog.slint  ui.slint
