[package]
name = "bmstu-cg-courseProject-5th-sem"
version = "0.1.3"
authors = ["Simeon Romanov <archeosAnacritis@gmail.com>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0"
repository = "https://github.com/archeoss/bmstu-cg-courseProject-5th-sem"
description = "Course project for BMSTU, CG course"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
slint = "0.3.0"
tiny-skia = "0.7"
cgmath = "0.18.0"
rfd = "0.10.0"
futures = "0.3.5"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }
wasm-bindgen-futures = "0.4.13"
[build-dependencies]
slint-build = "0.3.0"
