[package]
name = "bmstu-cg-courseProject-5th-sem"
version = "0.2.0"
authors = ["Simeon Romanov <archeosAnacritis@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/archeoss/bmstu-cg-courseProject-5th-sem"
description = "Course project for BMSTU, CG course"
keywords = ["egui", "3D", "CG", "z-buffer", "Solid of revolution"]
categories = ["CG", "BMSTU"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cgmath = "0.18.0"
rfd = "0.10.0"
chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
eframe = { version = "0.20.0", default-features = false }
egui = { version = "0.20.0", features = [
  "extra_debug_asserts",
] }

bytemuck = { version = "1.7.1", optional = true }
egui_extras = { version = "0.20.0"  }

# feature "persistence":
serde = { version = "1", optional = true, features = ["derive"] }



[features]
default = ["glow", "persistence"]

persistence = ["eframe/persistence", "egui/persistence", "serde"]
screen_reader = ["eframe/screen_reader"]                          # experimental
serde = ["dep:serde", "egui/serde"]

glow = ["eframe/glow"]
wgpu = ["eframe/wgpu", "bytemuck"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }
wasm-bindgen-futures = "0.4.13"
[build-dependencies]
slint-build = "0.3.0"
